--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,13 @@
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.3",
 		"express": "^5.1.0",
-		"jsonwebtoken": "^9.0.2"
+		"express-session": "^1.18.2",
+		"jsonwebtoken": "^9.0.2",
+		"mongoose": "^8.19.2",
+		"passport": "^0.7.0",
+		"passport-local": "^1.0.0",
+		"qrcode": "^1.5.4",
+		"speakeasy": "^2.0.0"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^6.0.0",
@@ -26,7 +32,11 @@
 		"@types/cors": "^2.8.19",
 		"@types/dotenv": "^6.1.1",
 		"@types/express": "^5.0.3",
+		"@types/express-session": "^1.18.2",
 		"@types/jsonwebtoken": "^9.0.10",
+		"@types/passport": "^1.0.17",
+		"@types/qrcode": "^1.5.6",
+		"@types/speakeasy": "^2.0.10",
 		"nodemon": "^3.1.10",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.9.3"
