--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ pnpm-debug.log*
 node_modules/
 frontend/node_modules/
 backend/node_modules/
+backend/config/serviceAccount.json
 
 # Build outputs
 dist/
