--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ pnpm-debug.log*
 # Dependency directories
 node_modules/
 frontend/node_modules/
+frontend/.env
 backend/node_modules/
 backend/config/serviceAccount.json
 
